Resize img + minification css js + ajout defer

--- a/style.css
+++ b/style.css
@@ -6,7 +6,21 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+.img-responsive{
+    width: 80vw;
+    height: 25em;
+    object-fit: contain;
+}
 
+.chouette-agence{
+    width: 200px;
+    height: 40px;
+}
+
+.logo{
+    width: 100px;
+    height: 100px;
+}
 a,
 button {
     transition: all .3s ease-in-out;
@@ -91,7 +105,7 @@ a:hover {
 }
 
 .texture-paper::before {
-    background: url("img/texture-paper.png");
+    background: url("img/texture-paper.webp");
     background-size: 280px 280px;
 }
 
@@ -677,7 +691,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 12px;
 }
 
 .tight-width-whitespace {
@@ -963,7 +977,7 @@ h4 {
     }
     .navbar-brand img {
         max-height: 40px;
-        width: auto;
+        width: 200px;
     }
     .nav-invert .navbar-header {
         float: none;
